# jwc-rwa

./: .clangd  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  FILE  Makefile  README.md  bachin2.gcode  basic-python-drawbot.py  cmake_install.cmake  compile_commands.json  config.yaml  drawbot_shyboy.py  example.gcode  pyproject.toml
.cache/clangd/index/: AOCL_Support.h.73183CDE0859B255.idx  AlignedBox.h.9074E1A94B1DB2D2.idx  AmbiVector.h.BC0FE740706C4AD1.idx  Amd.h.D2466CC349A44237.idx  AngleAxis.h.A05912E1F7E4368B.idx  ArithmeticSequence.h.FB94C195B647D4B0.idx  Array.h.F5B8D84590DF8570.idx  ArrayBase.h.BA142EC1D55FB84A.idx  ArrayCwiseBinaryOps.inc.EC34E91321FBE1C0.idx  ArrayCwiseUnaryOps.inc.F838F92CA009862A.idx  ArrayWrapper.h.5BF4205A79A8CAEC.idx  Assert.h.8AE6607D23CAEACA.idx  Assign.h.FEDB2A2DCD0CD5A0.idx  AssignEvaluator.h.AF6AE07C1FAD95C5.idx  AssignmentFunctors.h.E6630A8EBAAF7C9E.idx  BDCSVD.h.E177044554839312.idx  (+289 more)
apps/: CMakeLists.txt
apps/astctl/: CMakeLists.txt  blob_uploader.py
apps/astctl/src/: A.gcode  CMakeLists.txt  assembly.py  assembly_engine.cpp  assembly_engine.hpp  cmap.py  driver.cpp  driver.hpp  main.cpp  main.hpp  parse.cpp  parse.hpp  sequencer.hpp  sqlut.cpp  sqlut.hpp
chars/: a.gcode
fonts/default/: -.gcode  2.gcode  6.gcode  7.gcode  9.gcode  ;.gcode  B.gcode  D.gcode  E.gcode  F.gcode  G.gcode  I.gcode  J.gcode  L.gcode  N.gcode  O.gcode  P.gcode  QUES..gcode  W.gcode  X.gcode  Y.gcode  ].gcode
src/: main.cpp
src/assembly-engine/: assembly.py  char-load.py  cmap.py
src/control/: uploader.py
src/utils/: dbuploader.py
(+51 files in other folders)
